main.css
@import url(fonts/ibm-plex/ibm-plex-serif.css);
@import url(fonts/ibm-plex/ibm-plex-sans.css);

/* Breakpoints */
/*  30rem =  480px */
/*  48rem =  768px */
/*  60rem =  960px */
/*  80rem = 1280px */
/*  90rem = 1440px */
/* 120rem = 1920px */

:root {
	--colorBg: rgba(255, 255, 255, 0.9);
	--colorTxt: rgba(0, 0, 0, 0.9);

	--baseValue: 1.3rem;

	--lineHeightCopy: 1.4;
	--lineHeightHeadline: 1.2;

	--fontCopy: "IBM Plex Serif", "Times New Roman", serif;
	--fontHeadline: "IBM Plex Serif", "Times New Roman", serif;
	--fontLink: "IBM Plex Serif", "Times New Roman", serif;

	--fontWeight10: 400;
	--fontWeight20: 600;

	--transitionDur10: 200ms;
	--animationDur10: 1000ms;
	--animationDel10: 10000ms;
}

@media screen and (min-width: 48rem) {
	:root {
		--baseValue: 1.5rem;
		--lineHeightCopy: 1.5;
	}
}

@media screen and (min-width: 90rem) {
	:root {
		--baseValue: 1.6rem;
	}
}

@media (prefers-color-scheme: dark) {
	:root {
		--colorBg: rgba(0, 0, 0, 0.9);
		--colorTxt: rgba(255, 255, 255, 0.9);
	}
}

html {
	font-size: 100%;
}

body {
	--paddingBody: calc(var(--baseValue) * 1);

	margin: 0;
	padding: var(--paddingBody);

	color: var(--colorTxt);
	background-color: var(--colorBg);

	font-family: var(--fontCopy);
	font-weight: var(--fontWeight10);
	font-size: calc(var(--baseValue) * 1);
	line-height: var(--lineHeightCopy);

	overflow-wrap: break-word;
	-moz-osx-font-smoothing: grayscale;
	-webkit-font-smoothing: antialiased;
	-webkit-font-feature-settings: "liga" 1, "dlig" 1, "onum" 1;
	-moz-font-feature-settings: "liga" 1, "dlig" 1, "onum" 1;
	font-feature-settings: "liga" 1, "dlig" 1, "onum" 1;

	transition: background-color var(--transitionDur10) ease,
		color var(--transitionDur10) ease;

	display: grid;
	grid-template-areas:
		"header header"
		"main main"
		"footer footer";
	grid-template-rows: auto 1fr auto;
	gap: var(--paddingBody);

	min-height: calc((var(--vh, 1vh) * 100) - (var(--paddingBody) * 2));
}

@media screen and (min-width: 30rem) {
	body {
		--paddingBody: calc(var(--baseValue) * 2);
	}
}

@media screen and (min-width: 60rem) {
	body {
		grid-template-rows: auto 1fr;
		grid-template-columns: auto 1fr;
		grid-template-areas:
			"header header"
			"main footer";
	}
}

video {
	display: none;
}

@media screen and (min-width: 60rem) {
	video {
		z-index: -1;
		display: block;
		position: fixed;
		top: -10vh;
		left: -10vw;
		width: 120vw;
		height: 120vh;
		object-fit: cover;
		-webkit-filter: opacity(0.1);
		filter: opacity(0.1);
	}
}

h1,
h2,
h3,
h4,
h5,
p {
	margin: 0;
}

::selection {
	background-color: transparent;
}

::-moz-selection {
	background-color: transparent;
}

strong {
	/* font-style: italic; */
	font-weight: var(--fontWeight10);
}

a {
	font-family: var(--fontLink);
	font-style: italic;

	position: relative;
	display: inline-flex;
	color: var(--colorTxt);

	text-decoration: none;
	transition: color var(--transitionDur10) ease,
		opacity var(--transitionDur10) ease;
}

a::before {
	position: absolute;
	content: "";
	bottom: 0;
	right: 0;
	width: 100%;
	height: calc(1em / 24);
	background-color: var(--colorTxt);
	transition: background-color var(--transitionDur10) ease,
		bottom var(--transitionDur10) ease;
}

a:hover::before {
	bottom: calc(1em / 16);
}

a:not([title="Legal notice"])::after {
	content: "↗";
	padding-left: calc(1em / 8);
	display: inline;
}

a:hover {
	opacity: 0.5;
	transition: opacity var(--transitionDur10) ease;
}

a:focus {
	outline: none;
	background-color: var(--colorTxt);
	color: var(--colorBg);
}

.size30 {
	font-size: calc(var(--baseValue) * 2.7);
}

.size40 {
	font-size: calc(var(--baseValue) * 1.3);
}

.size50 {
	font-size: calc(var(--baseValue) * 1);
}

.size60 {
	font-size: calc(var(--baseValue) * 0.75);
}

.copy {
	line-height: var(--lineHeightCopy);
	font-weight: var(--fontWeight10);
}

.headline {
	font-family: var(--fontHeadline);
	line-height: var(--lineHeightHeadline);
	font-weight: var(--fontWeight20);
}

.copy,
.headline {
	max-width: 56ch;
}

.stackS {
	display: grid;
	row-gap: calc(var(--baseValue) * 1);
}

.stackM {
	display: grid;
	row-gap: calc(var(--baseValue) * 2);
}

.stackL {
	display: grid;
	row-gap: calc(var(--baseValue) * 4);
}

header {
	display: inline-flex;
	grid-area: header;
	align-self: flex-start;
}

@keyframes jiggle {
	0% {
		transform: rotate(0);
	}

	15% {
		transform: rotate(-5deg);
	}

	30% {
		transform: rotate(5deg);
	}

	45% {
		transform: rotate(-5deg);
	}

	60% {
		transform: rotate(0);
	}
}

.logo {
	fill: currentColor;
	height: calc(var(--baseValue) * 1.35);
	width: auto;
	animation: var(--animationDur10) ease var(--animationDel10) 3 jiggle;
}

.logo:hover {
	cursor: pointer;
}

main {
	grid-area: main;
	align-self: flex-end;
}

footer {
	--elementPaddingTop: calc(var(--baseValue) * 1);
	--elementPaddingSide: calc(var(--baseValue) * 1);

	grid-area: footer;

	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	text-align: right;

	align-self: flex-end;
	justify-self: flex-start;

	margin-top: calc(var(--elementPaddingTop) * -1);
	margin-right: calc(var(--elementPaddingSide) * -1);

	justify-items: flex-start;
}

@media screen and (min-width: 60rem) {
	footer {
		display: grid;
		justify-self: end;
	}
}

footer a {
	margin: var(--elementPaddingTop) var(--elementPaddingSide) 0 0;
}

